syntax = "proto3";
import "common.proto";
import "google/protobuf/empty.proto";

package sail.api.v1;

service CertificateService {
  rpc List(google.protobuf.Empty) returns (ListCertificateResponse) {}
  rpc Watch(google.protobuf.Empty) returns (stream WatchCertificateResponse) {}
}

message WatchCertificateResponse{
  EventType event_type = 1;
  Certificate certificate = 2;
}

message ListCertificateResponse{
  repeated Certificate items = 1;
}

message Certificate {
  repeated string hosts = 1;
  string certificate_id = 2;
  string key = 3;
  string value = 4;
}